Fix initial rendering lag issue   - By changing menu & content layout   - Fix keyboard navigation going to menu     even if it was hidden   - Add initial overflow logic

--- a/src/components/so-todo-item/so-todo-item.css
+++ b/src/components/so-todo-item/so-todo-item.css
@@ -1,3 +1,5 @@
+@import url("../../global/utils.css");
+
 .card {
   max-width: 60rem;
   min-width: 38.4rem;
@@ -21,6 +23,7 @@
   display: flex;
   height: 5.2rem;
   align-items: center;
+  overflow: hidden;
 }
 
 .wrapper input {
